--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,21 @@
+html, body, #app {
+	width: 100vw;
+	min-height: 100vh;
+}
+
+#app {
+	display: flex;
+	flex-direction: column;
+}
+
+main {
+	flex-grow: 1;
+}
+
+footer {
+	flex-shrink: 0;
+}
+
 *,
 *::before,
 *::after {
