all fixed it seems like

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,6 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 html, body, #app {
 	width: 100vw;
 	min-height: 100vh;
+	overflow-x: hidden;
+}
+
+html {
+	font-size: 16px;
+}
+
+body {
+	font-family: 'Rubik', sans-serif;
 }
 
 #app {
@@ -24,48 +35,22 @@ footer {
 	box-sizing: border-box;
 }
 
-ul,
-ol {
-	margin: 0;
+a {
+	text-decoration: none;
 }
 
-.rating-bg-bad {
-	background-color: rgb(192, 9, 9);
+a:hover {
+	text-decoration: none!important;
 }
 
-.rating-bg-good {
-	background-color: rgb(255, 145, 0);
+.container {
+	width: 80%;
+	margin: 0 auto;
 }
 
-.rating-bg-perfect {
-	background-color:  rgb(40, 192, 9);
+.title {
+	text-align: center;
+	font-size: 2rem;
+	font-weight: 600;
+	color: #222;
 }
-
-.rating-bg-info {
-	background-color: #214eaf
-}
-
-.card-rating {
-	position: absolute;
-	top: 10px;
-	left: 10px;
-	display: flex;
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-	align-items: center;
-	justify-content: center;
-}
-
-.project-img {
-	width: 100%;
-	height: 150px;
-}
-
-.project-img img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
-
-
